<resources>
    <string name="app_name">IMarketAndroid</string>
    <string name="location_current">Vị Trí Hiện tại</string>
    <string name="number_event">Số Lượng Sự Kiện</string>
    <string name="market_name_text">Trung tâm thương mại AEON</string>
    <string name="found_shop">Cửa Hàng Tìm Được</string>
    <string name="facebook_app_id">530129487174289</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_search">Tìm Kiếm</string>
    <string name="search_title">Tìm Kiếm</string>
    <string name="product_sale">sản phẩm khuyến mại</string>
    <string name="vacancies">vị trí tuyển dụng</string>
    <string name="search_hint">Nhập một từ mà bạn muốn tìm kiếm</string>
    <string name="login_hint_username">Tài Khoản</string>
    <string name="show_logo_app">show logo app</string>
    <string name="login_hint_password">Mật Khẩu</string>
    <string name="login_button_text">Đăng Nhập</string>
    <string name="login_button_log_in_with_facabook">Đăng Nhập Với FaceBook</string>
    <string name="login_button_login_in_with_gmail"> Đăng Nhập Với Gmail</string>
    <string name="login_forget_password"><u>Quên mật khẩu</u></string>
    <string name="signup_full_name">Họ Tên</string>
    <string name="signiup_register">Đăng Ký</string>
    <string name="signup_required_information">Thông tin cần điền</string>
    <string name="signup_email_address">Email và Số điện thoại</string>
    <string name="signup_confirm_password">Xác nhận mật khẩu</string>
    <string name="confirm_forget_password">Xác nhận mật khẩu</string>
    <string name="forget_send">Lấy lại Mật Khẩu</string>
    <string name="notification_user_pass">Tài Khoản hoặc mật khẩu đang trống </string>
    <string name="permission">Đọc Danh bạ</string>
    <string name="retry">Thử lại</string>
    <string name="no_allow_print">Nếu bạn không cho phép đọc danh bạ, bạn không thể truy
        cập gmail</string>
    <string name="Settings">Cài đặt</string>
    <string name="err_msg_name">Nhập Họ Tên</string>
    <string name="err_msg_email">Nhập Email</string>
    <string name="err_msg_password">Nhập Mật Khẩu</string>
    <string name="err_msg_password_confirm">Mật Khẩu Không Khớp</string>
    <string name="item_save">Lưu</string>
    <string name="call">Gọi điện</string>
    <string name="book">Đặt hàng</string>
    <string name="schedule">Chia Sẻ</string>
    <string name="favorite">Yêu thích</string>
    <string name="msg_login_invaild">Tài Khoản hoặc Mật khẩu không đúng !</string>
    <string name="progressdialog">Authenticating...</string>
    <string name="total">Tổng:</string>
    <string name="soluong">Số lượng:</string>
    <string name="muangay">Mua ngay</string>
    <string name="sanpham">Sản phẩm:</string>
    <string name="giasanpham">Giá sản phẩm:</string>
    <string name="chiphiphatsinh">Chi phí phát sinh:</string>
    <string name="thanhtien">Thành tiền:</string>
    <string name="phuongthucnhanhang">Phương thức nhận hàng</string>
    <string name="tructiep">Trực tiếp</string>
    <string name="chuyenhang">Chuyển hàng</string>
    <string name="remove">Remove </string>
    <string name="phone_number">Số Điện Thoại</string>
    <string name="hint_mail_tungb">tungb@gmail.com</string>
    <string name="email">Email</string>
    <string name="buy_online">Mua Online</string>
    <string name="address_ship">Địa chỉ nhận ship hàng</string>
    <string name="address_hint">Hà Đông - Hà Nội</string>
    <string name="time_ship">Thời gian nhận ship hàng</string>
    <string name="time_time">19:00</string>
    <string name="date_date">24/08/2016</string>
    <string name="login_with_other">Đăng nhập</string>
    <string name="continueeee">Tiếp tục</string>
    <string name="time_go_shop">Thời gian đến mua hàng</string>
    <string name="buy_offline">Mua tại cửa hàng</string>
    <string name="restaurant_name">Hải Sản Biển Đông - Trần Thái Tông</string>
    <string name="book_via_center">Đặt chỗ ngay qua tổng đài</string>
    <string name="time_gotoshop">Giờ đến</string>
    <string name="day_in">Ngày đến</string>
    <string name="count_people">Người lớn</string>
    <string name="kid">Trẻ em</string>
    <string name="select_day">Chọn ngày hoàn thành</string>
    <string name="select_time">Lựa chọn thời gian</string>
    <string name="tel">tel:</string>
    <string name="hint_number">1234567890</string>
    <string name="goi">Gọi</string>
    <string name="continuee">Tiếp tục</string>
    <string name="fill_note">Điền ghi chú tại đây</string>
    <string name="current_location_title">Hãy nhập số cột mốc gần bạn</string>
    <string name="bic_C">Bic C Thăng Long</string>
    <string name="hast_tag_bicc">#bigcthanglong</string>
    <string name="message_rate">Mình đã gắn bó với Lotte Cinema Land Mark Hà Nội từ hồi cấp 3.
        Tới nay đã được gần 5 năm rồi.
        Quả thật sự trải nghiệm về dịch vụ lẫn những tiện ích của trung tâm làm mình và bạn bè
        rất hài lòng và thích thú.</string>
    <string name="ques">Big C Thăng Long như thế nào ?</string>
    <string name="comment_here">Bình luận</string>
    <string name="post">GỬI</string>
    <string name="ok">Hoàn thành</string>
    <string name="cancle">Thoát</string>
    <string name="count_vote">500 đánh giá</string>
    <string name="name_user">Công Phương Đông</string>
    <string name="fake_tyle">4,5 / 5</string>
    <string name="follow">theo dõi</string>
    <string name="mot_sao">1 * Tôi không thích nội dung này</string>
    <string name="hai_sao">2 * Tôi không thích</string>
    <string name="ba_sao">3 * Tạm được</string>
    <string name="bon_sao">4 * Tôi thích nội dung này</string>
    <string name="nam_sao">5 * Tôi rất thích nội dung này</string>
    <string name="share_point">id_point</string>
    <string name="idPoint">idPoint</string>
    <string name="idSavePoint">idSavePoint</string>
    <string name="M">M</string>
    <string name="warning_location">Không tìm thấy vị trí này trên sơ đồ</string>
    <string name="find_store">Tìm đường</string>
    <string name="check_store">Cửa hàng</string>
    <string name="save_point_title">Lưu vị trí</string>
    <string name="current_location_warning">Không tìm được đường đến vị trí này</string>
    <string name="C">C</string>
    <string name="choose_floor">Lựa chọn tầng</string>
    <string name="first_floor">Tầng 1</string>
    <string name="make_edge">Vẽ cạnh</string>
    <string name="draw_path">Vẽ đường</string>
    <string name="find_way">Tìm đường</string>
    <string name="delete_point">Xóa điểm</string>
    <string name="second_floor">Tầng 2</string>
    <string name="clother">Quần áo</string>
    <string name="origin_store">Cửa hàng...</string>
    <string name="warning_text">hay nhap day du cac o trong</string>
    <string name="warning_input">warning input</string>
    <string name="comma">,</string>
    <string name="title_save_point">Vị trí này cách </string>
    <string name="name_commerce">AEON</string>
    <string name="login_befor">Thiết bị này đã được đăng nhập trước đó .</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_forget_password_text">Reset your password</string>
    <string name="title_fragment_dialog">Mật khẩu sẽ được gửi tới địa chỉ mà gmail bạn đã đăng ký
    ký  </string>
    <string name="hint_profile_adress">Framgia VietNam</string>
    <string name="hint_profile_mail">imarket@gmail.com</string>
    <string name="hint_profile_numberphone">(0123)456789</string>
    <string name="hint_profile_brithday">20/11/1994</string>
    <string name="hint_profile_fullname">Imarket framgia VietNam</string>
    <string name="action_save">Lưu</string>
    <string name="action_cancel">Hủy</string>
    <string name="toast_cancel_profile">Hủy</string>
    <string name="toast_save_successfully">Update Thành công</string>
    <string name="user_name_nav">Imarket</string>
    <string name="mail_com">Imarket@framgia.com</string>
    <string name="count_favorite">26</string>
    <string name="favoritee">Favorite</string>
    <string name="bought">Bought</string>
    <string name="count_bount">8</string>
    <string name="name_product">Iphone 7s Plus</string>
    <string name="count_follow">94</string>
    <string name="sign_in_text">Sign in</string>
    <string name="profile_text">Profile</string>
    <string name="sign_out_text">Sign out</string>
    <string name="food_store">Cửa hàng ăn uống</string>
    <string name="address_bigC">Trần Duy Hưng, Trung Hoà, Cầu Giấy, Hà Nội</string>
    <string name="name_market">Big C Thăng Long</string>
    <string name="name">Name</string>
    <string name="vote_product">Đánh giá</string>
    <string name="rate_product_message">Sản phầm khá chất lượng</string>
    <string name="danh_gia">Đánh giá</string>
    <string name="input_current_location">Bạn cần nhập vị trí của mình trước khi sử dụng
        tính năng này</string>
    <string name="mustbe_barclicklistener">must be implement OnclickBarListensener</string>
    <string name="details_text">Chi tiết sản phẩm</string>
    <string name="coment">Bình luận sản phẩm</string>
    <string name="name_product_text">XẢ HÀNG ÁO NẮNG UNIQLO</string>
    <string name="price_product_fake">đ 100.000</string>
    <string name="save_point">lưu vị trí</string>
    <string name="info_shop">Thông tin cửa hàng</string>
    <string name="recruitment_introduction"><![CDATA[Giới thiệu & Tuyển dụng]]></string>
    <string name="intro_shop">Với hàng trăm nghìn sản phẩm thời trang nữ đang có mặt tại Sendo.vn,
        các bạn gái có thể thỏa sức mua sắm và tạo nên cho mình phong cách vô cùng cuốn hút.
        Sendo.vn với tiêu chí mua sắm trực tuyến đảm bảo sẽ là nơi mang đến cho nam giới những sản
        phẩm thời trang nữ đẹp, giá rẻ và hợp xu hướng thời trang 2016. Bên cạnh đó, Sendo.vn còn
        mang đến cho bạn những dịch vụ tốt nhất như: giao hàng toàn quốc, thanh toán khi nhận hàng,
        hoàn tiền 100% nếu sản phẩm không đúng mô tả, thông tin khách hàng được bảo mật tuyệt đối.
        Cùng nhiều chương trình ưu đãi khuyến mãi, giảm giá thường niên trong năm khác chắc chắc sẽ
        mang đến cho phái đẹp một không gian mua sắm thật hiện đại, đảm bảo và tiện ích.</string>
    <string name="requip">Tuyển 2 nhân viên nữ thu ngân, yêu cầu ngoại hình. Lương 5.000.000 đ
        cộng thưởng .\nTuyển 5 nhân viên bồi bàn nam nữ, yêu cầu ngoại hình. Lương 7.000.000 đ
        cộng thưởng .</string>
    <string name="smart_phone">Smart Phone</string>
    <string name="count_heart_shop">Người thích : 120</string>
    <string name="count_follow_shop">Người theo dõi : 90</string>
    <string name="name_shop">NAME SHOP</string>
    <string name="vote_text_shop">Vote : 4.5</string>
    <string name="branch_text">Chi nhánh</string>
    <string name="address_text">Hà Đông - Hà Nội</string>
    <string name="address_shop">Địa chỉ</string>
    <string name="phonenumbershop">SĐT</string>
    <string name="website_shop">Website</string>
    <string name="text_web_fake">http://abc.com</string>
    <string name="facebook_shop">Facebook</string>
    <string name="text_facebook_fake">http://facebook.com</string>
    <string name="requip_shop">Giới thiệu</string>
    <string name="introo_shop">Tuyển dụng</string>
    <string name="album_shop">Album</string>
    <string name="item_cart">cart</string>
    <string name="text_share_title">Điều bạn muốn chia sẻ</string>
    <string name="error">Lỗi</string>
    <string name="list_point_saved">Danh sách vị trí đã lưu</string>
    <string name="done">Hoàn thành</string>
    <string name="note">Ghi chú :</string>
    <string name="share_with_facebook">Chia sẻ với Facebook</string>
    <string name="item_logout">Đăng Xuât</string>
    <string name="review_by">Review by</string>
    <string name="enter_title">Tiêu đề</string>
    <string name="text_share_hint">Nhập nội dung tại đây.</string>
</resources>