<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit"
        android:orderInCategory="101"
        android:title="@string/item_save"
        app:showAsAction="always"/>
    <group
        android:id="@+id/main_menu"
        android:checkableBehavior="single"
        android:visible="true">

        <item
            android:id="@+id/action_save"
            android:title="@string/action_save"/>
        <item
            android:id="@+id/action_cancel"
            android:title="@string/action_cancel"/>
        <item
            android:id="@+id/action_logout"
            android:title="@string/item_logout"/>
    </group>

</menu>