<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@android:color/transparent"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_avatar_item_message_rate"
            android:layout_width="@dimen/avatar_small_size"
            android:layout_height="@dimen/avatar_size"
            android:layout_centerHorizontal="true"
            android:src="@drawable/avatar"/>

        <TextView
            android:id="@+id/text_name_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_avatar_item_message_rate"
            android:layout_centerHorizontal="true"
            android:text="@string/review_by"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_xsmall_size"/>

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/button_post_message_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/margin_10dp"
            android:background="?attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="@dimen/text_large_size"/>
        </android.support.v7.widget.LinearLayoutCompat>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/logo_big_c"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/text_question"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/width_height_34"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:gravity="center"
                    android:text="@string/ques"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/common_text_size_18"/>

                <LinearLayout
                    android:id="@+id/layout_stars"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/width_height_34"
                    android:gravity="center"
                    android:orientation="horizontal"/>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_start_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_3dp"
                        android:text="@string/mot_sao"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/text_xsmall_size"/>

                    <TextView
                        android:id="@+id/text_start_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hai_sao"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/text_xsmall_size"/>

                    <TextView
                        android:id="@+id/text_start_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ba_sao"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/text_xsmall_size"/>

                    <TextView
                        android:id="@+id/text_start_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bon_sao"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/text_xsmall_size"/>

                    <TextView
                        android:id="@+id/text_start_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nam_sao"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/text_xsmall_size"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_5dp">

                    <EditText
                        android:id="@+id/edit_text_message_rate_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/enter_title"
                        android:textColor="@color/text_color2"
                        android:textColorHint="@color/text_color"
                        android:textSize="@dimen/text_small_size"/>

                    <EditText
                        android:id="@+id/edit_text_message_rate_comment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/comment_here"
                        android:textColor="@color/text_color2"
                        android:textColorHint="@color/text_color"
                        android:textSize="@dimen/text_small_size"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
