<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/white"
              android:orientation="vertical"
              android:scrollbars="horizontal"
              android:theme="@style/fragmentlogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/linear_login_margin"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_view_logo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_height_logo"
            android:contentDescription="@string/show_logo_app"/>

        <EditText
            android:id="@+id/edit_text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint_username"
            android:singleLine="true"
            android:textStyle="italic"/>

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint_password"
            android:inputType="textPassword"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/text_view_forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/login_margin_forgetpassword"
            android:gravity="right"
            android:text="@string/login_forget_password"/>

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin_comment"
            android:background="@drawable/button_login"
            android:text="@string/login_button_text"
            android:textSize="@dimen/login_button_textsize"
            />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_marginbottom_cardview"
            android:layout_marginTop="@dimen/login_margintop_card"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="@dimen/login_radius_cardview"
            app:cardPreventCornerOverlap="false">

            <FrameLayout

                android:id="@+id/frame_button_facebook"
                android:layout_width="match_parent"
                android:layout_height="@dimen/framelayout_login"
                android:background="@drawable/button_login">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/login_button_log_in_with_facabook"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:src="@drawable/ic_facebook"/>
            </FrameLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="@dimen/login_radius_cardview">

            <FrameLayout
                android:id="@+id/frame_button_gmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/framelayout_login"
                android:background="@drawable/button_login"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/login_button_login_in_with_gmail"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:src="@drawable/ic_gmail"/>
            </FrameLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</LinearLayout>
